<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bms_grey"
        android:orientation="vertical"
        android:padding="@dimen/common_page_margin">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:buttonTint="@color/bms_green"
            android:layout_marginTop="10dp"
            android:text="@string/i_read_and_accept_terms_and_conditions"
            android:textColor="@color/default_grey" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>