<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/book_kerala_logo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/BmsEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionUnspecified"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/BmsEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:buttonTint="@color/bms_green"
            android:text="@string/remember_me"
            android:textColor="@color/default_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgot_password" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/new_user_sign_up"
        android:textColor="@color/bms_green" />
</LinearLayout>