<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/BmsTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/booking_summary" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/BmsTitleNormalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_all" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_booking_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                style="@style/BmsEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_customer"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_mob"
                style="@style/BmsEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_city"
                style="@style/BmsEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_country"
                style="@style/BmsEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/BmsEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_bg"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_booking_type"
                    style="@style/BmsSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_bg"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_booking_agent"
                    style="@style/BmsSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    style="@style/BmsButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bms_button_cancel"
                    android:text="@string/cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_book"
                    style="@style/BmsButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/book" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.core.widget.NestedScrollView>
