<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bms_grey"
        android:orientation="vertical"
        android:padding="@dimen/common_page_margin">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name_business"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_business"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_address1"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address1"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_address2"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_2"
            android:imeOptions="actionUnspecified"
            android:inputType="text" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pincode"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pincode"
            android:imeOptions="actionUnspecified"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_country"
                style="@style/BmsSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                android:textAlignment="textStart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_state"
                style="@style/BmsSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                android:textAlignment="textStart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_city"
                style="@style/BmsSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownSelector="@android:drawable/spinner_dropdown_background"
                android:textAlignment="textStart" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_telephone"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:imeOptions="actionUnspecified"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_booking_manager_mob"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/booking_manager_mobile"
            android:imeOptions="actionUnspecified"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_contact_person_mob"
            style="@style/BmsEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_contact_person_mobile"
            android:imeOptions="actionUnspecified"
            android:inputType="phone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>